public class Gato : Mascota
{
    public override string Especie => "Gato";
    public bool EsIndoor { get; set; }
}