// Clase para mascota del tipo Perro
public class Perro : Mascota
{
    public override string Especie => "Perro";
    public bool EsAdiestrado { get; set; } // Indica si está adiestrado
}
