public class Reptil : Mascota
{
    public override string Especie => "Reptil";
    public bool EsVenenoso { get; set; }
}